Project

General

Profile

Actions

Bug #11418

closed

spawn segfaults

Bug #11418: spawn segfaults

Added by nobu (Nobuyoshi Nakada) about 11 years ago. Updated about 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:70251]

Description

Process.spawn sometimes segfaults, because buffer allocated by ALLOCV_N is not marked, when the size exceeds 1024 bytes.
In these days, TestEncodingConverter#test_default_external has occasionally segfaulted by this problem.

Until 2.2, this has not appeared since Process.spawn didn't use ALLOCV_N.
Maybe unnecessary before 2.2.


Related issues 1 (0 open — 1 closed)

Has duplicate Ruby - Bug #12507: random SEGV in kernel.system when called with long parametre listClosedActions
Actions

Also available in: PDF Atom